# pandora

pandora/adaptio-gen_2_ms3/: .clang-tidy  .clang-tidy-limited  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  adaptio.sh  nix-test.sh
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/: .clang-format  .gitlab-ci.yml  CODEOWNERS  TESTING_AND_TOOLS.md  dev-test.sh  flake.nix
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/.gitlab-ci/: lints.yml  stage-pipeline.yml
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/assets/configuration/: configuration.yaml
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/assets/events/: events.yaml
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/assets/scanner_calibration/: LX31624160019.yaml  LX31624160053.yaml  info.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/cmake/modules/: FindPnDriver.cmake
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/docs/: Doxyfile.in  adaptio.md  adaptio_internal_joint_tracking_sequence.md  bead_control.md  external_speed_control.md  requirements.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/docs/controller_interface/: abp_start_from_tracking.md  shallow_groove_handover.md  stop.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/docs/scanner/: scanner.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/scripts/: adaptivity_functions.sci  adaptivity_ui.sci  report_template.tex  weldreport.py  weldreport_preface.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/: DOCS.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/benchmarks/: sqlite_benchmark.cc  sqlite_benchmark.h
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/block_tests/: BLOCK_TESTS.md  abp_parameters_test.cc  abp_tests.md  calibration_test.cc  controller_block_tests.cc  heartbeat_test.cc  joint_geometry_test.cc  joint_tracking_test.cc  manual_weld_test.cc  manual_welding_log_test.cc  scanner_basic_test.cc  shutdown_test.cc  weld_control_test.cc  weld_data_set_test.cc  weld_start.cc
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/common/: enum_helpers.h  json_helpers.h
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/configuration/: CMakeLists.txt  DOCS.md  calibration_converter.h  conf_factory.h  config_manager.h  controller_config_converter.h  scanner_calibration_converter.cc  scanner_calibration_converter.h
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/controller/: CMakeLists.txt  DOCS.md  axis_output_plc_adapter.cc  controller.cc  controller.h.jinja2  controller_configuration.h  controller_data.h.jinja2  controller_factory.cc  controller_messenger.cc  controller_messenger.h  hwhmi_server_impl.cc  kinematics_server.h  plc_oam_server_impl.h  slide_position_buffer.h  weld_axis_buffer.cc  weld_axis_buffer.h  weld_axis_filter.cc  weld_system_server_impl.cc
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/main/: CMakeLists.txt  main_states.md
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/scanner/: scanner_application.cc  scanner_factory.h  scanner_factory_impl.cc
pandora/adaptio-gen_2_ms3/adaptio-gen_2_ms3/src/test_utils/: block_tests.cc  unit_tests.cc
pandora/adaptio-gen_2_ms3/assets/basler/: a2A4096-9gmPRO_40297732.pfs
pandora/adaptio-gen_2_ms3/assets/scanner_calibration/: HIL.yaml  LX31624160052.yaml
pandora/adaptio-gen_2_ms3/cmake/modules/: FindIdl.cmake  FindPylon.cmake  RenderJinja.cmake
pandora/adaptio-gen_2_ms3/docs/: GITLAB_DUO_WORKFLOW_GUIDE.md  WebHMI_Interface_Description.md  axis_positioning.md  build-without-nix-develop.md  thread_monitor.md  weld_control.md
pandora/adaptio-gen_2_ms3/docs/controller_interface/: abp_start_from_tracking_with_error.md  back_to_tracking_from_abp.md  error_to_ready.md  groove_detection_error.md  shallow_groove_no_handover.md  tracking_start_from_idle.md
pandora/adaptio-gen_2_ms3/docs/scanner/: big_snake.md
pandora/adaptio-gen_2_ms3/scripts/: DOCS.md  adaptivity_report.sh  pipeline_durations.py  plot_mcs.py  profile_matching.sci  scanner_calibration_checksum.py  simulated_adaptivity_report.sce
pandora/adaptio-gen_2_ms3/src/: CMakeLists.txt  main.cc  version.h.in
pandora/adaptio-gen_2_ms3/src/benchmarks/: CMakeLists.txt  README.md  gaussian_filter_benchmark.cc  gaussian_filter_benchmark.h  main.cc  test_data.h
pandora/adaptio-gen_2_ms3/src/block_tests/: CMakeLists.txt  abp_test.cc  adaptive_welding_test.cc  manual_weld_test.cc  ready_state_test.cc  settings_test.cc  version_test.cc  weld_process_parameters_test.cc  weld_program_test.cc  weld_session.cc
pandora/adaptio-gen_2_ms3/src/block_tests/helpers/: helpers.cc  helpers_event_handling.h  helpers_mfx.h  helpers_mfx_tracking.h  helpers_simulator.h  helpers_tracking.h  helpers_weld_program.h
pandora/adaptio-gen_2_ms3/src/block_tests/mocks/: config_manager_mock.h
pandora/adaptio-gen_2_ms3/src/common/: CMakeLists.txt  DOCS.md  clock_functions.h
pandora/adaptio-gen_2_ms3/src/configuration/: conf_file_handler.h  config_manager_impl.cc  config_manager_impl.h  configuration_error.cc  configuration_error.h  converter.h  factory.cc  factory.h  file_handler.cc  file_handler.h  image_logging_converter.h  image_provider_converter.h  scanner_converter.h  tolerances_converter.h  weld_control_converter.h
pandora/adaptio-gen_2_ms3/src/controller/: axis_control.md  axis_output_plc_adapter.h  controller_factory.h  hwhmi_server.h  hwhmi_server_impl.h  kinematics_server_impl.cc  kinematics_server_impl.h  mgmt_states.md  plc_oam_server.h  plc_oam_server_impl.cc  slide_position_buffer.cc  weld_axis_filter.h  weld_system_server.h  weld_system_server_impl.h
pandora/adaptio-gen_2_ms3/src/main/: application.cc  application.h
pandora/adaptio-gen_2_ms3/src/scanner/: CMakeLists.txt  scanner_application.h  scanner_factory_impl.h
pandora/adaptio-gen_2_ms3/src/test_utils/: CMakeLists.txt  reporters.h  testlog.h
pandora/infra-and-test-main/container_files/gl_metrics/: Dockerfile  README.md  pyproject.toml
pandora/infra-and-test-main/container_files/laserbeak/: pyproject.toml
pandora/infra-and-test-main/test/: pyproject.toml
pandora/infra-and-test-main/test/unit_tests/: __init__.py  conftest.py
(+1014 files in other folders)
