[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testzilla"
version = "0.3.2"
description = "HIL test framework for the Adaptive Weld System project"
authors = [{name = "Team Godzilla", email = "team-godzilla@esab.onmicrosoft.com"}]
dependencies = ["fabric",
    "loguru",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests",
    "websockets",
    "playwright"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["testzilla*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore:.*coroutine.*never awaited.*:RuntimeWarning",
    "ignore:Event loop is closed:RuntimeWarning",
    "ignore:.*Task was destroyed but it is pending.*:RuntimeWarning",
    "ignore:.*Exception ignored in.*WebSocketCommonProtocol.*:pytest.PytestUnraisableExceptionWarning",
    "ignore:.*RuntimeError.*Event loop is closed.*:pytest.PytestUnraisableExceptionWarning",
]
